# dsNodes

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
Callbacks/biDir/: biDir.py
cmake/: FindMaya.cmake
cpp/: cpp.sln  maya2019Preset.props  maya2020Preset.props  mayaProperties.props
cpp/dsAttractDeformer/: dsAttractDeformer.cpp  dsAttractDeformer.h
cpp/dsDrawVectorNode/: dsDrawVectorNode.vcxproj  dsDrawVectorNode.vcxproj.filters
cpp/dsNodes/: dsNodes.cpp  dsNodes.vcxproj  dsNodes.vcxproj.filters
cpp/dsRaycastNode/: dsDrawVectorNode.cpp  dsRaycastNode.aps  dsRaycastNode.cpp  dsRaycastNode.h  dsRaycastNode.vcxproj  dsRaycastNode.vcxproj.filters  resource.h
cpp/dsRaycastNode/Debug/: vc141.idb
dsAttractDeformer/plugins/: AEtemplate.mel  dsAttractDeformer.py  prAttractNode.py
dsAttractDeformer/tests/: dsAttractDeformerTest.ma  dsAttractDeformerTest.py
dsDivideAngleOutputLinear/plugins/: nodeTemplate.py
dsDrawVector/: dsDrawVectorNode.cpp  dsDrawVectorNode.h
dsDrawVector/plugins/: AEtemplate.mel  drawVector.py  dsDrawVector.py  footprint.py
dsDrawVector/tests/: drawVectorTest.py
dsGhosting/tests/: dsGhostingTest.py
dsRaycast/: AEtemplate.mel  openGlTest.py
dsRaycast/plugins/: dsRaycast.py
dsRaycast/plugins/cpp/: dsRaycast.cpp
dsRaycast/tests/: dsRaycastTest.py
dsRoll/plugins/: AEtemplate.mel  dsRoll.py
dsRoll/tests/: dsRollTest.py  testScene.ma
python/Callbacks/biDir/: biDir.py
src/: dsAttractDeformer.cpp  dsAttractDeformer.h  dsNodes.cpp  dsRaycast.cpp  dsRaycast.h  plugin.cpp
(+34 files in other folders)
